ingredients,preparation time are added to the index.html page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <ul>
+    <ul id="nav-bar">
         <li><a href="#home">Home</a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -26,6 +26,30 @@
             flavors based on your preference.
        </pre>
     </div>
-    
+
+    <div class="preparation">
+        <pre>
+                <strong style="font-family: 'Courier New', Courier, monospace; color:red">Preparation Time</strong>
+                <hr>
+                . <strong>Total: </strong>approximately 30 min.
+                . <strong>Preparation:</strong> 20min.
+                . <strong>cooking:</strong> 10min.
+        </pre>
+    </div>
+
+    <div id="ingredient">
+        <ul>
+            <h3 style="font-style:italic;color:brown">Ingredient:</h3>
+            <li>1/2 cup butter, melted</li>
+            <li>1 cup sugar</li>
+            <li>2 eggs</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1 cup all-purpose flour</li>
+            <li>1/2 cup unsweetened cocoa powder</li>
+            <li>1/2 teaspoon baking powder</li>
+            <li>1/4 teaspoon salt</li>
+          </ul>
+    </div>
+
 </body>
 </html>
